src/test/deca/context/valid/added/this.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  int x;
  void setX(int x){
    this.x = x;
  }
}

{
  A a = new A();
  a.setX(3);
}
