src/test/deca/context/invalid/added/access_to_protected_field.deca
/*
    Ce bloc vide est syntaxiquement valide
*/

class A{
  protected int x = 4;
}

{
  A a = new A();
  int y = a.x;
}
